--- a/Dot - Web/public_html/index.html
+++ b/Dot - Web/public_html/index.html
@@ -11,7 +11,7 @@ and open the template in the editor.
     </head>
     <body>
         <canvas id="matrix">Canvas</canvas>
-        
+        <div id="console"></div>
         <script type="text/javascript">
             (function () {
                     'use strict';
