Added scores board in GUI. Fixed functionality which checks if cycle is already found.

--- a/Dot - Web/public_html/index.html
+++ b/Dot - Web/public_html/index.html
@@ -11,7 +11,11 @@ and open the template in the editor.
     </head>
     <body>
         <canvas id="matrix">Canvas</canvas>
-        <div id="console"></div>
+        <div id="scores">
+            <span class="red">Red player: <b>0</b></span>
+            <span class="blue">Blue player: <b>0</b></span>
+        </div>
+        <!--<div id="console"></div>-->
         <script type="text/javascript">
             (function () {
                     'use strict';
